Created shared module, clear imports and created user-edit component

--- a/client/src/app/announcements/announcements.component.html
+++ b/client/src/app/announcements/announcements.component.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="text-center mb-5">
-    <h2>Liczba wyników - {{pagination?.totalItems}}</h2>
+    <h2 class="text-center text-primary mb-5">Liczba wyników - {{pagination?.totalItems}}</h2>
   </div>
 
   <div class="">
