Adding filters active and unactive to  user announcements component

--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
@@ -31,7 +31,8 @@
       <img src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}" class="card-img-top">
     </div>
   </div>
-  <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style btn-own-style">Edytuj</button>
-  <button (click)="deleteAnnouncement(announcement)" class="btn-red-style btn-own-style">Usuń</button>
+  <button routerLink="/user-announcements/{{announcement.id}}/details" class="btn-blue-style">Szczegóły</button>
+  <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style">Edytuj</button>
+  <button (click)="deleteAnnouncement(announcement)" class="btn-red-style">Usuń</button>
 </div>
 
