--- a/client/src/app/users/user-form/user-form.component.html
+++ b/client/src/app/users/user-form/user-form.component.html
@@ -1,5 +1,6 @@
 <div class="row justify-content-center">
   <div class="user-form">
+    <h6>Nazwa użytkownika: {{member.userName}}</h6>
     <form [formGroup]="userForm" (ngSubmit)="userForm.valid && update()" autocomplete="off">
       <gs-text-input [formControl]='userForm.controls["firstName"]' [label]='"Imię"'></gs-text-input>
       <gs-text-input [formControl]='userForm.controls["lastName"]' [label]='"Nazwisko"'></gs-text-input>
