--- a/client/src/app/announcements/announcement-card/announcement-card.component.css
+++ b/client/src/app/announcements/announcement-card/announcement-card.component.css
@@ -5,6 +5,8 @@
   padding-bottom: 20px;
   background-color: white;
   border-radius: 0.4cm;
+  min-width: 400px;
+  height: auto;
 }
 
 .announcement-card{
@@ -21,11 +23,14 @@
   padding: 5px;
 }
 
-.photo{
-  min-width: 150px;
-  max-width: 200px;
-  height: auto;
+.photo-container{
   margin: 10px;
+}
+
+.photo{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .btn-own-style{
