--- a/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
+++ b/client/src/app/announcements/announcement-manage-card/announcement-manage-card.component.html
@@ -27,12 +27,13 @@
         <a> {{announcement.address.province}}</a>
       </div>
     </div>
-    <div class="photo">
-      <img src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}" class="card-img-top">
+    <div class="photo-container">
+      <img  class="photo" src="{{announcement.photoUrl || './assets/no_photo.jpg'}}" alt="{{announcement.name}}">
     </div>
   </div>
   <button routerLink="/user-announcements/{{announcement.id}}/details" class="btn-blue-style">Szczegóły</button>
   <button routerLink="/user-announcements/{{announcement.id}}/edit" class="btn-blue-style">Edytuj</button>
+  <button routerLink="/user-announcements/{{announcement}}/edit" class="btn-blue-style">{{statusButton}}</button>
   <button (click)="deleteAnnouncement(announcement)" class="btn-red-style">Usuń</button>
 </div>
 
