add active/deactive button, update photo and edit-card component

--- a/client/src/app/announcements/announcement-add/announcement-add.component.html
+++ b/client/src/app/announcements/announcement-add/announcement-add.component.html
@@ -1,4 +1,7 @@
 <div *ngIf="userOfAccount" class="form-container">
   <h2 class="text-center text-primary mb-5">Dodaj nowe ogłoszenie</h2>
   <gs-announcement-form [userOfAccount]="userOfAccount"></gs-announcement-form>
+  <div class="form-group text-center mt-4">
+    <button class="btn btn-danger me-2" routerLink="/user-announcements" type="button">Wyjdz</button>
+  </div>
 </div>
