--- a/client/src/app/announcements/user-announcements/user-announcements.component.html
+++ b/client/src/app/announcements/user-announcements/user-announcements.component.html
@@ -1,16 +1,31 @@
 <div *ngIf="announcements">
+  <h2 class="text-center text-primary mb-5">Twoje ogłoszenia</h2>
+  <div class="form-group text-center mt-4">
+    <button class="btn-blue-style" [ngClass]="btnActive ? 'btn-blue-style-clicked' : 'btn-blue-style'" (click)="loadActiveAnnouncements()">Aktywne</button>
+    <button class="btn-blue-style" [ngClass]="!btnActive ? 'btn-blue-style-clicked' : 'btn-blue-style'" (click)="loadUnactiveAnnouncements()">Nieaktywne</button>
+  </div>
   <div *ngIf="announcements?.length <=0">
-    <h2 class="text-center text-primary mb-5">Nie masz jeszcze żadnych ogłoszeń.</h2>
+    <h2 class="text-center text-primary mt-5">Brak ogłoszeń</h2>
+  </div>
+  <div class="" *ngFor="let announcement of announcements">
+    <gs-announcement-manage-card
+      [announcement]="announcement"
+      (parentDeleteAnnouncement)="deleteAnnouncement(announcement)"
+      (parentChangeStatusActiveOfAnnouncement)="changeStatusActiveOfAnnouncement(announcement)">
+    </gs-announcement-manage-card>
   </div>
 
-  <div *ngIf="announcements?.length > 0">
-    <h2 class="text-center text-primary mb-5">Twoje ogłoszenia</h2>
-    <div class="form-group text-center mt-4">
-      <button class="btn-blue-style" [ngClass]="btnActive ? 'btn-blue-style-clicked' : 'btn-blue-style'" (click)="loadActiveAnnouncements()">Aktywne</button>
-      <button class="btn-blue-style" [ngClass]="!btnActive ? 'btn-blue-style-clicked' : 'btn-blue-style'" (click)="loadUnactiveAnnouncements()">Nieaktywne</button>
-    </div>
-    <div class="" *ngFor="let announcement of announcements">
-      <gs-announcement-manage-card [announcement]="announcement" (parentDeleteAnnouncement)="deleteAnnouncement(announcement)"></gs-announcement-manage-card>
-    </div>
+  <div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination
+        [boundaryLinks]="true"
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;">
+    </pagination>
   </div>
 </div>
