--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -42,6 +42,24 @@
   transition: .5s;
 }
 
+.btn-green-style{
+  height: 40px;
+  width: 200px;
+  border: 1px solid;
+  background: white;
+  border-radius: 25px;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(36, 155, 0);
+  margin: 0 10px 10px 0;
+}
+
+.btn-green-style:hover{
+  background: rgb(36, 155, 0);
+  color: white;
+  transition: .5s;
+}
+
 .form-container{
   background-color: white;
   padding: 20px;
