--- a/client/src/app/core/register/register.component.html
+++ b/client/src/app/core/register/register.component.html
@@ -52,7 +52,7 @@
 
       <div class="form-group text-center mt-4">
         <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Rejestruj</button>
-        <button class="btn btn-danger me-2" routerLink="/" routerLinkActive="router-link-active" type="button">Wyjdz</button>
+        <button class="btn btn-danger me-2" routerLink="/" type="button">Wyjdz</button>
       </div>
     </form>
   </div>
