--- a/client/src/app/users/user-form/user-form.component.html
+++ b/client/src/app/users/user-form/user-form.component.html
@@ -39,7 +39,7 @@
 
       <div class="form-group text-center mt-4">
         <button [disabled]="!userForm.valid" class="btn btn-success me-2" type="submit">Aktualizuj</button>
-        <button class="btn btn-danger me-2" routerLink="/" routerLinkActive="router-link-active" type="button">Wyjdz</button>
+        <button class="btn btn-danger me-2" routerLink="/" type="button">Wyjdz</button>
       </div>
     </form>
   </div>
