Add Admin Controler in Api

--- a/client/src/app/users/users-list/users-list.component.html
+++ b/client/src/app/users/users-list/users-list.component.html
@@ -1,1 +1,83 @@
-<p>users works!</p>
+<div *ngIf="members">
+  <div class="container filter-panel">
+    <h2>Filtry</h2>
+    <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="col-auto">
+            <label>Nazwa użytkownika</label>
+            <input type="text" class="form-control" style="width: 200px" name="userName"
+                [(ngModel)]="memberParams.userName">
+        </div>
+
+        <div class="col-auto">
+          <label>Imię</label>
+          <input type="text" class="form-control" style="width: 200px" name="firstName"
+              [(ngModel)]="memberParams.firstName">
+        </div>
+
+        <div class="col-auto">
+          <label>Nazwisko</label>
+          <input type="text" class="form-control" style="width: 200px" name="lastName"
+              [(ngModel)]="memberParams.lastName">
+        </div>
+
+        <div class="col-auto">
+          <label>Płeć: </label>
+          <select [(ngModel)]="memberParams.gender" name="gender" style="width: 130px" class="form-control ms-1">
+              <option *ngFor="let gender of genderList" [value]="gender.value">
+                  {{gender.display}}
+              </option>
+          </select>
+        </div>
+
+        <div class="col-auto">
+          <label>Rola: </label>
+          <select [(ngModel)]="memberParams.role" name="role" style="width: 130px" class="form-control ms-1">
+              <option *ngFor="let role of roleList" [value]="role.value">
+                  {{role.display}}
+              </option>
+          </select>
+        </div>
+
+        <div class="col-auto">
+          <label>Sortuj: </label>
+          <select [(ngModel)]="memberParams.orderBy" name="orderBy" style="width: 150px" class="form-control ms-1">
+              <option *ngFor="let sort of sortList" [value]="sort.value">
+                  {{sort.display}}
+              </option>
+          </select>
+        </div>
+
+        <div>
+            <button class="btn btn-primary me-2" type="submit" onclick="this.blur()">Filtruj</button>
+            <button (click)="resetFilters()" class="btn btn-info" onclick="this.blur()">Resetuj</button>
+        </div>
+      </form>
+  </div>
+
+  <div *ngIf="members?.length <=0">
+    <h2 class="text-center text-primary mt-5 mb-5">Brak ogłoszeń</h2>
+  </div>
+  <div *ngIf="members?.length > 0">
+    <h2 class="text-center text-primary mt-5 mb-5">Liczba wyników - {{pagination?.totalItems}}</h2>
+  </div>
+
+  <div class="">
+    <div class="" *ngFor="let member of members">
+      <gs-user-card [member]="member"></gs-user-card>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination
+        [boundaryLinks]="true"
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;">
+    </pagination>
+  </div>
+</div>
