--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -10,7 +10,7 @@
       </ul>
     </li>
     <li *gsHasRole='["Admin", "Moderator"]'>
-      <a routerLink="/user-announcements">Panel administracyjny</a>
+      <a>Panel administracyjny</a>
       <ul>
         <li><a routerLink="/announcements-add">Akceptacja ogłoszeń</a></li>
         <li *gsHasRole='["Admin"]'>
