--- a/client/src/app/users/users-list/users-list.component.html
+++ b/client/src/app/users/users-list/users-list.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="members">
+  <h2 class="text-center text-primary mb-5">Użytkownicy</h2>
   <div class="container filter-panel">
     <h2>Filtry</h2>
     <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
@@ -55,7 +56,7 @@
   </div>
 
   <div *ngIf="members?.length <=0">
-    <h2 class="text-center text-primary mt-5 mb-5">Brak ogłoszeń</h2>
+    <h2 class="text-center text-primary mt-5 mb-5">Brak użytkowników</h2>
   </div>
   <div *ngIf="members?.length > 0">
     <h2 class="text-center text-primary mt-5 mb-5">Liczba wyników - {{pagination?.totalItems}}</h2>
@@ -63,7 +64,7 @@
 
   <div class="">
     <div class="" *ngFor="let member of members">
-      <gs-user-card [member]="member"></gs-user-card>
+      <gs-user-card [member]="member" (parentRoleModerator)="roleModerator(member)"></gs-user-card>
     </div>
   </div>
 
