--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -12,7 +12,7 @@
     <li *gsHasRole='["Admin", "Moderator"]'>
       <a>Panel administracyjny</a>
       <ul>
-        <li><a routerLink="/announcements-add">Akceptacja ogłoszeń</a></li>
+        <li><a routerLink="/announcements-for-approval">Akceptacja ogłoszeń</a></li>
         <li *gsHasRole='["Admin"]'>
           <a routerLink="/users">Użytkownicy</a>
         </li>
