--- a/client/src/app/core/nav/nav.component.css
+++ b/client/src/app/core/nav/nav.component.css
@@ -106,4 +106,9 @@ nav .ul-left{
   position: relative;
 }
 
-
+img {
+  max-height: 50px;
+  border: 2px solid #fff;
+  display: inline;
+  margin: 10px;
+}
