Upload login page

--- a/client/src/app/core/errors/not-found/not-found.component.html
+++ b/client/src/app/core/errors/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <h1>Not found</h1>
-  <button class="btn btn-info btn-lg" routerLink='/'>Return to home page</button>
+<div class="col-md-12 text-center">
+  <h1>Nie znaleziono!</h1>
+  <button class="btn-blue-style btn-own-style" routerLink='/'>Przejdz do strony głównej</button>
 </div>
