--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -39,6 +39,12 @@
   transition: 0.5s;
 }
 
+.btn-red-style-clicked{
+  background: rgb(190, 42, 5);
+  color: white;
+  transition: 0.5s;
+}
+
 .btn-red-style:hover{
   background: rgb(190, 42, 5);
   color: white;
@@ -55,6 +61,12 @@
   font-weight: 700;
   color: rgb(36, 155, 0);
   margin: 0 10px 10px 0;
+  transition: 0.5s;
+}
+
+.btn-green-style-clicked{
+  background: rgb(36, 155, 0);
+  color: white;
   transition: 0.5s;
 }
 
