--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,8 +1,4 @@
-
-.margin-top-180{
-  margin-top: 180px;
-}
-
-.margin-top-230{
-  margin-top: 230px;
+.own-margin{
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
