--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <gs-nav></gs-nav>
 
-<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
+<div class="container own-margin">
   <router-outlet></router-outlet>
 </div>
 
