Delete atrribute isDeleted from photos and announcements Entity + clear database

--- a/client/src/app/announcements/announcement-add/announcement-add.component.html
+++ b/client/src/app/announcements/announcement-add/announcement-add.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="userOfAccount" class="form-container">
+<div *ngIf="userOfAccount">
   <h2 class="text-center text-primary mb-5">Dodaj nowe ogłoszenie</h2>
   <gs-announcement-form [userOfAccount]="userOfAccount"></gs-announcement-form>
   <div class="form-group text-center mt-4">
