--- a/client/src/app/announcements/announcement-details/announcement-details.component.html
+++ b/client/src/app/announcements/announcement-details/announcement-details.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="announcement">
+  <h2 class="text-center text-primary mb-5">Szczegóły ogłoszenia</h2>
   <div class="row justify-content-center">
     <div class="col-4 announcement-details">
       <h2 class="title">
