--- a/client/src/app/announcements/announcement-edit/announcement-edit.component.html
+++ b/client/src/app/announcements/announcement-edit/announcement-edit.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="announcement && userOfAccount" ngClass="form-container">
+<div *ngIf="announcement && userOfAccount">
   <h2 class="text-center text-primary mb-5">Edycja ogłoszenia</h2>
   <gs-announcement-form [announcement]="announcement" [userOfAccount]="userOfAccount"></gs-announcement-form>
   <div class="form-group text-center mt-4">
