--- a/client/src/app/announcements/announcement-form/announcement-form.component.html
+++ b/client/src/app/announcements/announcement-form/announcement-form.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center form-container">
   <div class="col-4">
     <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && saveAnnouncement()" autocomplete="off">
 
