updated login componenet

--- a/client/src/app/core/errors/not-found/not-found.component.html
+++ b/client/src/app/core/errors/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 text-center">
+<div class="col-md-12 text-center my-container">
   <h1>Nie znaleziono!</h1>
   <button class="btn-blue-style btn-own-style" routerLink='/'>Przejdz do strony głównej</button>
 </div>
