--- a/client/src/app/admin-panel/announcement-admin-card/announcement-admin-card.component.css
+++ b/client/src/app/admin-panel/announcement-admin-card/announcement-admin-card.component.css
@@ -2,7 +2,7 @@
   border-bottom: 1px solid;
   padding: 10px;
   margin: 20px;
-  padding-bottom: 20px;
+  padding: 20px 40px;
   background-color: white;
   border-radius: 0.4cm;
   min-width: 400px;
